# project12

./: pyproject.toml
src/: processing.py
src/processing/: main.py  main1.py  readme.md  test_main.py
