[tool.poetry]
name = "project12"
version = "0.1.0"
description = ""
authors = ["нурия клементьева <cnuria@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
flake8 = "^7.1.2"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
